# ibflex2

./: Makefile  flake.nix  pyproject.toml  requirements-development.txt
.github/workflows/: commit-ibflex.yml  nix.yml
ibflex/: Types.py  __init__.py  __version__.py  client.py  enums.py  parser.py  utils.py
tests/: test_client.py  test_parser.py  test_types.py
